--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <import type="android.view.View" />
 
         <variable
@@ -14,8 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
         <include
             android:id="@+id/header"
@@ -28,13 +26,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/products"
             android:layout_width="match_parent"
-            android:layout_marginTop="40dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="72dp">
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/products_shimmer_view_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:visibility="@{vm.shouldShowLoading ? View.VISIBLE : View.GONE}"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal"
@@ -56,9 +55,7 @@
                         android:orientation="vertical">
 
                         <include layout="@layout/item_product_placeholder" />
-
                         <include layout="@layout/item_product_placeholder" />
-
                         <include layout="@layout/item_product_placeholder" />
 
                     </LinearLayout>
@@ -70,14 +67,11 @@
                         android:orientation="vertical">
 
                         <include layout="@layout/item_product_placeholder" />
-
                         <include layout="@layout/item_product_placeholder" />
-
                         <include layout="@layout/item_product_placeholder" />
 
                     </LinearLayout>
                 </LinearLayout>
-
 
             </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -86,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="20dp"
+                android:visibility="@{vm.shouldShowLoading ? View.GONE : View.VISIBLE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -100,7 +95,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:spanCount="2"
-                    tools:listitem="@layout/item_products" />
+                    tools:listitem="@layout/item_product" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -108,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="20dp"
-                android:visibility="gone"
+                android:visibility="@{vm.shouldShowError ? View.VISIBLE : View.GONE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -136,7 +131,6 @@
                     app:layout_constraintTop_toBottomOf="@id/error_message" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
