--- a/app/src/main/res/layout/header_search_cart.xml
+++ b/app/src/main/res/layout/header_search_cart.xml
@@ -3,20 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:layout_marginTop="18dp"
+    android:layout_marginTop="0dp"
     android:layout_weight="9"
     android:paddingHorizontal="10dp">
 
+    <ImageView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/searchBar"
+
+        android:layout_marginStart="8dp"
+        android:id="@+id/appbar"
+        android:layout_width="66dp"
+        android:layout_height="22dp"
+        android:contentDescription="@string/logo"
+        android:src="@drawable/ic_logo" />
 
     <EditText
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
         android:id="@+id/searchBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="18dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/what_do_you_search_for"
         android:textColorHint="@color/desc_dark_blue"
         android:drawableStart="@drawable/ic_search"
@@ -33,10 +44,12 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
-        android:layout_marginStart="15dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
+        android:contentDescription="@string/cartIcon"
+        app:layout_constraintStart_toEndOf="@id/searchBar"
         android:src="@drawable/ic_cart"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+       app:layout_constraintTop_toBottomOf="@id/appbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
