% Improved The Project Structure

--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="vm"
-            type="com.example.route_task.features.products.ProductsViewModel" />
+            type="com.example.route_task.features.products.fragment.ProductsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
