--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -19,12 +19,12 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:layout_marginEnd="15dp">
+                android:layout_height="@dimen/tool_bar_height"
+                android:layout_marginEnd="@dimen/extra_margin">
                 <ImageView
-                    android:layout_width="66dp"
-                    android:layout_height="22dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="@dimen/logo_width"
+                    android:layout_height="@dimen/logo_height"
+                    android:layout_marginTop="@dimen/extra_margin"
                     android:contentDescription="@string/logo"
                     android:src="@drawable/ic_logo" />
             </androidx.appcompat.widget.Toolbar>
