--- a/app/src/main/res/layout/item_product_placeholder.xml
+++ b/app/src/main/res/layout/item_product_placeholder.xml
@@ -5,19 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="20dp"
+    android:layout_margin="@dimen/medium_margin"
+    app:cardCornerRadius="@dimen/margin_20"
     app:strokeColor="@color/stroke_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="10dp">
+        android:paddingBottom="@dimen/medium_margin">
 
         <View
             android:id="@+id/product_img"
-            android:layout_width="180dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/width_180"
+            android:layout_height="@dimen/width_120"
             android:background="@color/background"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,9 +27,9 @@
 
         <TextView
             android:id="@+id/product_name"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/constrain_dimen"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/medium_margin"
             android:background="@color/background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,9 +38,9 @@
 
         <TextView
             android:id="@+id/product_price"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/constrain_dimen"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/medium_margin"
             android:background="@color/background"
             app:layout_constraintStart_toStartOf="@id/product_name"
             app:layout_constraintTop_toBottomOf="@id/product_name"
@@ -48,9 +48,9 @@
 
         <TextView
             android:id="@+id/review_tv"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/constrain_dimen"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/medium_margin"
             android:background="@color/background"
             app:layout_constraintStart_toStartOf="@id/product_price"
             app:layout_constraintTop_toBottomOf="@id/product_price"
@@ -58,10 +58,10 @@
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/add_to_cart_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="@dimen/size30"
+            android:layout_height="@dimen/size30"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:layout_marginBottom="@dimen/medium_margin"
             android:background="@color/background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
