--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,25 @@
 <resources>
     <!-- Example spacing value -->
     <dimen name="grid_spacing">16dp</dimen>
+    <dimen name="tool_bar_height">42dp</dimen>
+    <dimen name="extra_margin">16dp</dimen>
+    <dimen name="medium_margin">8dp</dimen>
+    <dimen name="logo_height">22dp</dimen>
+    <dimen name="logo_width">66dp</dimen>
+    <dimen name="margin_40">40dp</dimen>
+    <dimen name="margin_2">2dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="padding_62">62dp</dimen>
+    <dimen name="constrain_dimen">0dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+    <dimen name="width_120">120dp</dimen>
+    <dimen name="width_180">180dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+    <dimen name="margin_18">18dp</dimen>
+    <dimen name="size30">30dp</dimen>
+
+
+    <!-- test sizes -->
+    <dimen name="textSize_14">14sp</dimen>
+    <dimen name="textSize_11">11sp</dimen>
 </resources>
